--- a/ADJOINT/manual.html
+++ b/ADJOINT/manual.html
@@ -42,7 +42,7 @@ p,li,span {color: var(--main-text-color);}
       <h4>2.1. Gradient and Governing Equations</h4>
       <figure style='float: right; margin: 0 0 1em 1em; width: 500px;'>
          <img src='graphic.png' alt='graphic' style='width: 100%; display: block;'>
-         <figcaption style='font-size: 0.8em; text-align: center; font-style: italic;'>Critical points of a mathematical function.</figcaption>
+         <figcaption style='font-size: 0.8em; text-align: center; font-style: italic;'>Fitting the distribution to the aim curve.</figcaption>
       </figure>
       <p>The Adjoint Method is formulated in the context of a constrained optimization problem, where the evolution of the system is governed by a set of state equations. Consider a general first-order dynamic system described by:</p>
       <p style='text-align: center;'>\(A(u) \frac{dx}{dt} + B(u) x = F(t;u) \Rightarrow R(t;u) = A(u) \frac{dx}{dt} + B(u) x -F(t;u)\) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\(\text{(Eq. 1)}\)</p>
